# sagemcp

./: .env.example  .env.local.template  .gitignore  Dockerfile  README.md  build.sh  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-checks.yml  pypi-publish.yml
docs/: architecture.md  auth.md  user-oauth-tokens.md
docs/connectors/: bitbucket.md  claude-code.md  codex.md  confluence.md  copilot.md  cursor.md  discord.md  excel.md  gitlab.md  gmail.md  google-sheets.md  google-slides.md  linear.md  outlook.md  powerpoint.md  teams.md  windsurf.md
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: ConnectorEditModal.tsx  ConnectorModal.tsx  ConnectorOverridesManagement.tsx  ExternalMCPModal.tsx  Layout.tsx  OAuthConfigModal.tsx  OAuthManager.tsx  ProcessStatus.tsx  TenantEditModal.tsx  ToolManagement.tsx  theme-provider.tsx
frontend/src/hooks/: use-logs.ts  use-pool.ts  use-sessions.ts  use-stats.ts
frontend/src/pages/: Connectors.tsx  ContainerConsole.tsx  Dashboard.tsx  Installations.tsx  Logs.tsx  MCPTesting.tsx  Marketplace.tsx  OAuthSuccess.tsx  Pool.tsx  ServerDetail.tsx  Settings.tsx  TenantDetail.tsx  Tenants.tsx  mcpTestingValidation.ts
frontend/src/test/: utils.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
src/sage_mcp/: config.py  main.py
src/sage_mcp/api/: admin.py  admin_audit.py  admin_logs.py  admin_policies.py  admin_pool.py  admin_sessions.py  admin_settings.py  admin_stats.py  auth.py  mcp.py  oauth.py  registry.py  routes.py
src/sage_mcp/connectors/: __init__.py  (+31 more)
tests/: conftest.py
tests/integration/: test_admin_overrides.py  test_admin_tools_external.py  test_api.py  test_audit_endpoints.py  test_auth_endpoints.py  test_auth_login.py  test_auth_tenant_isolation.py  test_mcp_transport.py  test_permission_enforcement.py  test_policy_endpoints.py
tests/unit/: test_admin_process_status.py  test_admin_stats.py  test_audit.py  test_auth.py  test_coding_tool_connectors.py  test_config.py  test_connectors.py  test_encryption.py  test_external_mcp_runtime.py  test_graphql_client.py  test_local_catalog.py  test_mcp_server_local_extensions.py  test_mcp_server_routing.py  test_mcp_transport_local_extensions.py  test_metrics_tool_usage.py  test_migrations.py  test_models.py  test_pagination.py  test_permissions.py  test_protocol_negotiation.py  test_rate_limiter.py  test_retry.py  test_server_pool.py  test_session_manager.py  test_tokens.py  test_tool_policy.py  test_user_model.py
(+78 files in other folders)
