[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-mcp"
dynamic = ["version"]
description = "Multi-tenant MCP (Model Context Protocol) server platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sage MCP", email = "contact@example.com" },
]
keywords = ["mcp", "model-context-protocol", "multi-tenant", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "mcp>=1.0.0",
    "greenlet>=3.0.0",
    # Orchestration dependencies
    "aiodocker>=0.21.0",
    "kubernetes>=28.1.0",
    "kubernetes-asyncio>=31.1.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "aiosqlite>=0.19.0",
    "prometheus-client>=0.20.0",
    # CLI dependencies needed for testing
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/sage-mcp/sage-mcp"
Documentation = "https://sage-mcp.readthedocs.io"
Repository = "https://github.com/sage-mcp/sage-mcp.git"
Issues = "https://github.com/sage-mcp/sage-mcp/issues"

[project.scripts]
sagemcp = "sage_mcp.cli.main:main"

[tool.hatch.version]
path = "src/sage_mcp/__init__.py"
pattern = "__version__ = [\"'](?P<version>[^\"']+)[\"']"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_mcp"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true